# Lumina

./: .gitignore  App.tsx  PLUGINS.md  README.md  constants.ts  fix.cjs  index.html  metadata.json  package-lock.json  package.json  style.css  tailwind.config.js  types.ts
.roo/: mcp.json
src/: constants.ts
src-tauri/: 2  Cargo.toml  json_parser.py  lumina.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: UI.tsx
src/services/: agent.ts  ai.ts  fs.ts  plugins.ts
src/types/: index.ts
