[package]
name = "lumina"
version = "0.1.0"
description = "Lumina AI Assistant"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] } # ЭТО ДЛЯ ЗАПРОСОВ К OLLAMA
tokio = { version = "1", features = ["full"] }
window-vibrancy = "0.7.1"
scraper = "0.19.0"

[lib]
name = "lumina_lib"
crate-type = ["lib", "cdylib", "staticlib"]
