[package]
name = "lumina"
version = "0.1.0"
description = "Lumina AI Assistant"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] } # ЭТО ДЛЯ ЗАПРОСОВ К OLLAMA
rquickjs = { version = "0.6.2", features = ["macro"] }
tokio = { version = "1", features = ["full"] }
window-vibrancy = "0.7.1"
scraper = "0.19.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
pdf-extract = "0.7.4"
glob = "0.3.1"
walkdir = "2.5.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[lib]
name = "lumina_lib"
crate-type = ["lib", "cdylib", "staticlib"]
